# flask_zmq

./: example_request.py  example_server.py  pyproject.toml
flask_zmq/: _types.py  client.py  server.py
